--- a/templates/pages/ingredient/index.html.twig
+++ b/templates/pages/ingredient/index.html.twig
@@ -9,9 +9,17 @@
 		{% if not ingredients.items is same as([]) %}
 		<h1>Mes ingrédients</h1>
 
+		<a href="{{path('ingredient.new')}}" class="btn btn-primary">Créer un ingrédient</a>
 		<div class="count mt-4">
 		      <h4> Il y a {{ ingredients.getTotalItemCount }} ingrédients au total </h4>
         </div>
+
+		{% for message in app.flashes('success') %}
+			<div class="alert alert-success mt-4">
+				{{ message }}
+			</div>
+		{% endfor %}
+		
 
 		<table class="table table-hover">
 			<thead>
