--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -9,8 +9,14 @@
 			<div class="collapse navbar-collapse" id="navbarColor02">
 				<ul class="navbar-nav me-auto">
 					<li class="nav-item">
-						<a class="nav-link active" href="#">Home
+						<a class="nav-link active" href="#">Acceuil
 							<span class="visually-hidden">(current)</span>
+						</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="{{path('ingredient')}}">Ingrédients
+							
 						</a>
 					</li>
 			</div>
