--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -9,7 +9,7 @@
 			<div class="collapse navbar-collapse" id="navbarColor02">
 				<ul class="navbar-nav me-auto">
 					<li class="nav-item">
-						<a class="nav-link active" href="#">Acceuil
+						<a class="nav-link active" href="">Acceuil
 							<span class="visually-hidden">(current)</span>
 						</a>
 					</li>
