--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,8 @@
 
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
+            <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         {% endblock %}
     </head>
     <body>
